kubernetes/apps/studioconcreteluka/mariadb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: studioconcreteluka
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
